@@ -1,5 +1,9 @@
 2004-10-11  Ulrich Drepper  <drepper@redhat.com>
 
+	* resolv/res_send.c (send_dg): Use nonblocking sockets.  Add
+	appropriate poll/select calls and restart operation if necessary.
+	Also handle EINTR.
+
 	* elf/tst-dlopenrpath.c (do_test): Enable code which was disabled
 	for debugging.
 
